# blog-python-multiple-project-20250405

./: README.md
.github/workflows/: python-lint-test.yaml
project-1/: Makefile  main.py  pyproject.toml  test_main.py
project-2/: Makefile  pyproject.toml
