[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy~=2.2.4"]

[dependency-groups]
dev = [
  "pytest~=8.3.4",
  "pytest-mock~=3.14.0",
  "deepdiff~=8.1.1",
  "mypy~=1.14.0",
]
lint = ["ruff~=0.11.4"]
