[project]
name = "project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi[standard]~=0.115.12"]

[dependency-groups]
dev = [
  "pytest~=8.3.4",
  "pytest-mock~=3.14.0",
  "deepdiff~=8.1.1",
  "mypy~=1.14.0",
]
lint = ["ruff~=0.11.4"]

[tool.mypy]
python_version = "3.12"
exclude = [".venv"]
